tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00062.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00062.c" (c, x86_64-unknown-linux-gnu)
global x : s32i = 0 [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @x : s32i*
    %3 = load %2 : s32i, align 4
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
