tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00066.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00066.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %8 = const 1 : s32i
        %9 = const 2 : s32i
        %10 = add %8, %9 : s32i [nsw]
        %11 = const 3 : s32i
        %12 = add %10, %11 : s32i [nsw]
        %13 = const 6 : s32i
        %14 = cmp ne %12, %13 : bool
        if %14 {
            %15 = const 1 : s32i
            store %15, %0
            %16 = load %0 : s32i
            return %16
        }
        yield
    }
    %2 = const 0 : s32i
    %3 = const 0 : s32i
    %4 = add %2, %3 : s32i [nsw]
    %5 = const 0 : s32i
    %6 = add %4, %5 : s32i [nsw]
    store %6, %0
    %7 = load %0 : s32i
    return %7
}
